# Parking

./: CMakeLists.txt  README.md  main.cpp  parking_interface.hpp
src/interface/: interface_functions.cpp  parking_interface.hpp
src/parking/: parking.cpp  parking.hpp
src/ticket/: ticket.hpp
src/utils/: utils.hpp
tests/: CMakeLists.txt  parking.cpp  payment.cpp
